# rapid-typist

./: .gitignore  AGENTS.md  README.md  pyproject.toml  rapid_typist_product_spec_v_1.md
rapid_typist/: cli.py  config.py  events.py  hotkey.py  menubar.py
rapid_typist/audio/: capture.py  utils.py  vad.py
rapid_typist/engines/: base.py  openai_whisper.py  whispercpp_backend.py
rapid_typist/sinks/: base.py  clipboard.py  file.py  paste.py  stdout.py
src/rapid_typist/: events.py  hotkey.py  menubar.py  tui.py
src/rapid_typist/audio/: capture.py  utils.py  vad.py
src/rapid_typist/engines/: base.py
src/rapid_typist/sinks/: base.py  clipboard.py  file.py  paste.py  stdout.py
tests/: test_imports.py
