[project]
name = "rapid-typist"
version = "0.1.0"
description = "Local, streaming speech-to-text for macOS (Apple Silicon)"
authors = [{ name = "Ashrut Tewari", email = "astewari@conviva.com" }]
requires-python = ">=3.11,<3.13"
readme = "README.md"

dependencies = [
  "click>=8.1",
  "rich>=13.5",
  "numpy>=1.26,<2.0",
  "sounddevice>=0.5",
  "webrtcvad>=2.0.10",
  "pydantic>=2.3",
  "pynput>=1.7.6",
  "pywhispercpp>=1.1.0",
  "rumps>=0.4.0",
  "pyobjc-framework-Quartz>=10.2",
  "setuptools>=65",
]

[project.scripts]
rapid-typist = "rapid_typist.cli:main"
rapid-typist-menubar = "rapid_typist.menubar:main"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = ["black", "ruff", "pytest", "pytest-asyncio", "mypy"]
